Change endpoint quote to quotes and add POST request
