# server/src/blueprints/quotes.py
@@ -1,19 +1,32 @@
-from flask import Blueprint, current_app, jsonify
+from flask import Blueprint, current_app, jsonify, request
 from models.model import Quote
 from services.quote_service import QuoteService
 
-quote = Blueprint('quote', __name__, url_prefix='/quote')
+quotes = Blueprint('quotes', __name__, url_prefix='/quotes')
 
 
-@quote.route('/')
+@quotes.route('', methods=['GET', 'POST'])
 def get_all_quotes():
-    current_app.logger.info("Called quote/ API endpoint")
-    result = QuoteService().get_all()
+    if request.method == 'POST':
+        current_app.logger.info("Called POST quote/ API endpoint")
+        content = request.json if request.json else {}
 
-    return jsonify(result)
+        quote = content.get("quote")
+        author = content.get("author")
+        category = content.get("category")
+
+        if quote and author and category:
+            QuoteService().add(Quote(body=quote, author=author, category=category))
+            return jsonify("Success")
+        else:
+            return jsonify("Invalid request body")
+    else:
+        current_app.logger.info("Called GET quote/ API endpoint")
+        result = QuoteService().get_all()
+        return jsonify(result)
 
 
-@quote.route('/first')
+@quotes.route('/first')
 def first_quote():
     current_app.logger.info("Called quote/first API endpoint")
     result = QuoteService().get_first()
@@ -21,7 +34,7 @@ def first_quote():
     return jsonify(result)
 
 
-@quote.route('/<int:id>')
+@quotes.route('/<int:id>')
 def id_quote(id):
     current_app.logger.info(f"Called quote/{id} API endpoint")
     result = QuoteService().get_id(id)
@@ -29,7 +42,7 @@ def id_quote(id):
     return jsonify(result) if result else (jsonify(), 404)
 
 
-@quote.route('/random')
+@quotes.route('/random')
 def random_quote():
     current_app.logger.info("Called quote/random API endpoint")
     result = QuoteService().get_random()
@@ -38,24 +51,16 @@ def random_quote():
 
 
 # TODO: Need error handling
-@quote.route('/<string:author>')
+@quotes.route('/<string:author>')
 def author_quote(author):
     current_app.logger.info("Called quote/<author> API endpoint")
     current_app.logger.info(author)
     quote = Quote.query.filter_by(author=author).first()
-
-    return jsonify(quote.to_json())
-
-
-@quote.route('/add')
-def add_quote():
-    current_app.logger.info("Called quote/add API endpoint")
-    result = QuoteService().add(Quote(body="Hello practice", author="Me and I", category="Myself"))
-    current_app.logger.info(f"Result: {result} API endpoint")
-    return jsonify("Success")
+    if quote:
+        return jsonify(quote.to_dict())
 
 
-@quote.route('/delete')
+@quotes.route('/delete')
 def delete_quote():
     current_app.logger.info("Called quote/delete API endpoint")
     result = QuoteService().delete(12)
